Do not use the CMS collector; however, enable escape analysis.